<resources>
    <string name="app_name">Bitaqwa</string>
    <string name="text_welcome">Assalamualaikum, Uhkty</string>
    <string name="text_name_pray">Subuh</string>
    <string name="text_time_pray">04:20</string>
    <string name="text_location_pray">Mekkah, Arab Saudi</string>
    <string name="text_menu_doa">Doa Doa</string>
    <string name="text_menu_dzikir">Dzikir</string>
    <string name="text_menu_zakat">Zakat</string>
    <string name="text_menu_jadwal_sholat">Jadwal\nSholat</string>
    <string name="text_menu_video_kajian">Video\nKajian</string>
    <string name="text_inspirasi">Inspirasi</string>
    <string name="text_jumlah_rupiah">Jumlah Rupiah</string>
    <string name="text_ok">OK</string>
    <string name="title_activity_menu_zakat">MenuZakatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- String for activity_task2 -->
    <string name="button1">BUTTON 1</string>
    <string name="button2">BUTTON 2</string>
    <string name="button3">BUTTON 3</string>
    <string name="button4">BUTTON 4</string>

    <!--  String for activity_task3  -->
    <string name="txt_scroll">Scroll View</string>
    <string name="txt_linear">Linear Layout</string>
    <string name="txt_relative">Relative Layout</string>
    <string name="txt_frame">Frame Layout</string>
    <string name="txt_constraint">Constraint</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_pagi_malam"><![CDATA[Pagi\n& Malam]]></string>
    <string name="text_doa_rumah">Rumah</string>
    <string name="text_doa_makanan_minuman"><![CDATA[Makanan & Minuman]]></string>
    <string name="text_doa_perjalanan">Perjalanan</string>
    <string name="text_doa_sholat">Sholat</string>
    <string name="text_doa_etika_baik">Etika Baik</string>
</resources>