<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:background="@color/dark_green"
        android:text="@string/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:background="@color/yellow"
        android:text="@string/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintBottom_toTopOf="@id/button3"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:background="@color/light_blue"
        android:text="@string/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintBottom_toTopOf="@id/button4"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:background="@color/ungu_janda"
        android:text="@string/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"/>

</androidx.constraintlayout.widget.ConstraintLayout>